# project-bacth62-artefect

./: .gitignore  Dockerfile  Dockerfile.streamlit  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirement-dev.in  requirement.in  requirements.in  requirements.txt  setup_airflow_gcp.sh  streamlit_app.py
.github/workflows/: python-app.yml  python-lint-test.yml  reusable-gcloud-setup.yml
airflow/: Dockerfile  docker-compose.yaml
airflow/dags/: dag_export_conso.py  dag_import_enedys.py  dag_open_meteo.py  hellodags.py
config/: .env.template  airflow.cfg  app_config.sample.toml  app_config.toml  app_config_template.toml  gcp-key.sample.json
dags/: dag_export_conso.py  dag_import_enedis.py  hellodags.py
data/: 2024-01-open-meteo.csv  2024-02-open-meteo.csv  2024-03-open-meteo.csv  2024-04-open-meteo.csv  2024-05-open-meteo.csv  2024-06-open-meteo.csv  2024-07-open-meteo.csv  2024-08-open-meteo.csv  2024-09-open-meteo.csv  2024-10-open-meteo.csv  2024-11-open-meteo.csv  2024-12-open-meteo.csv  temperature_mensuelle_77_2020_2023.parquet  temperature_mensuelle_france_2020_2023.parquet
data/geo/: communes-france.csv
notebooks/: explo_departements.ipynb
scripts/: collect_meteo_77.py  collect_meteo_by_commune.py  collect_meteo_france.py  list_communes.py  plot_temperature.py  visualize_meteo_data.py
src/: config.py  test_ile.ipynb
src/project_bacth62_artefect/: fetch_open_meteo.py
src/project_batch62_artefact/: fetch_open_meteo.py  upload_partitioned_bq.py
streamlit_app/: app.py  calculs.py  config.py  main.py
utils/: api.py
(+16 files in other folders)
