[project]
name = "project-bacth62-artefect"
version = "0.1.0"
description = ""
authors = [
    {name = "Stephane Romany",email = "stephrm972@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "project_bacth62_artefect", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
